fix for mobile menu visibility on short pages

--- a/less/mobile.less
+++ b/less/mobile.less
@@ -7,6 +7,7 @@
 	body {
 		height: 100%;
 		padding-top: 0;
+		padding-bottom: 0;
 		overflow-y: scroll;
 		overflow-x: hidden;
 	}
